<resources>
    <string name="app_name">SimpleMovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_score">User Score</string>
    <string name="search_button_search">Search</string>
    <string name="experimental_filter">Filters</string>
    <string name="experimental_score">Score</string>
    <string name="experimental_type">Type</string>
    <string name="movie_detail_backdrop_contentdescription">Movie Backdrop</string>
    <string name="movie_detail_poster">Movie Poster</string>
    <string name="movie_detail_description">Overview</string>
    <string name="movie_detail_protagonist">Protagonists</string>
    <string name="detail_screen_cast_button">Show complete cast and crew</string>
    <string name="movie_picker_findout_button">Find out more</string>
    <string name="api_status_fetching">We are fetching your data</string>
    <string name="api_status_almost">Almost there...</string>
    <string name="api_status_error">Something went wrong, check your internet connection and try again!</string>
    <string name="runtime">| %1$s h %2$s min | </string>
    <string name="refresh">pull to refresh</string>
    <string name="cast">%1$s (%2$d)</string>
...
