...
        <variable
            name="viewmodel"
            type="com.example.simplemovies.search.SearchLandingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_search_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_search_movies"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
...
