...
            name="movieProp"
            type="com.example.simplemovies.domain.MovieNetwork" />

    </data>

    <ImageView
        android:id="@+id/imageview_grid_movieposter"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="2dp"
        app:poster_path="@{movieProp.poster_path}" />
</layout>
